# os1

./: .env.example  .gitignore  Cargo.toml  Dockerfile.livekit  Dockerfile.livekit.dockerignore  LICENSE  README.md  bun.lockb  components.json  fly.toml  next.config.js  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json
.github/workflows/: ci-rs.yml
app/: page.tsx
app/auth/callback/: route.ts
app/login/: page.tsx
app/protected/: page.tsx
components/: AuthButton.tsx
components/tutorial/: FetchDataSteps.tsx
core/: mac_device.py  pyproject.toml  start.py  start.spec
core/source/clients/: base_device.py
core/source/server/: conftest.py  i.py  server.py  tunnel.py
core/source/server/services/llm/llamafile/: llm.py
core/source/server/services/stt/local-whisper/: stt.py
core/source/server/services/tts/openai/: tts.py
core/source/server/skills/: schedule.py
core/source/server/tests/: test_run.py
core/source/server/utils/: get_system_info.py  kernel.py  local_mode.py  process_utils.py
server/livekit_agents/: agent.py  llm.py
src/: App.tsx  globals.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accumulator.rs  device.rs  kernel.rs  main.rs  server.rs  system_tray.rs
src-tauri/src/server/: mod.rs  tunnel.rs
src/components/: AgentMultibandAudioVisualizer.tsx  CallNavbar.tsx  ChatMessage.tsx  ChatMessageInput.tsx  ChatTile.tsx  DynamicIsland.tsx  LoadingSVG.tsx  NameValueRow.tsx  Playground.tsx  PlaygroundDeviceSelector.tsx  PlaygroundTile.tsx  PlaygroundToast.tsx  welcome.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  separator.tsx
src/hooks/: useAppConfig.tsx  useTrackVolume.tsx  useWindowResize.ts
src/utils/: livekit.ts  tw.ts  types.ts
