[package]
name = "os1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", version = "0.1.0" }
log = "0.4.21"
pretty_env_logger = "0.5.0"

[[bin]]
name = "os1"
