[package]
name = "os1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
gpui = { git = "https://github.com/zed-industries/zed", version = "0.1.0" }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "os1"
