[package]
name = "os1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-maximize", "window-hide", "window-close", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize", "window-show", "shell-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
anyhow = "1.0.81"
log = "0.4.21"
futures = "0.3.30"
ngrok = { version = "0.13.1", features = ["axum"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5.0"
axum = { version = "0.6.4", features = ["tokio"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
